# MLOps

./: .dockerignore  .env.example  .gitignore  .gitmodules  DataSplit.py  Dockerfile  MLproject  Makefile  README.md  REFACTORING_PLAN.md  dvc.yaml  feature_importance.csv  jacobo.csv.dvc  pyproject.toml  pytest.ini  requirements.txt  test_mlflow_connection.py
.dvc/: config
.github/workflows/: data-pipeline-ci.yml  (+1 more)
.helm/: values.yml
config/: models_config.yaml
models/: .gitignore  BaselineCletasPoisson.ipynb  EDA_celtas.ipynb  minmax_scaler.pickle  modelo_LR.pickle  modelo_LR.pickle.dvc  modelo_lasso.pickle  modelo_lasso.pickle.dvc  modelo_ridge.pickle  modelo_ridge.pickle.dvc  modelo_xgboost.pickle.dvc
notebooks/: 1.0-jr-clean-casual-registered-cnt.ipynb  1.0-pl-limpieza-inicial.ipynb  2.0-ah-eda-limpio.ipynb  2.0-pl-data-split.ipynb  3.0-oa-sarima-train.ipynb  DataSplit.ipynb  LimpiezaInicial.ipynb  ModelosLineales.ipynb  XGBoost.ipynb  clean_casual_registered_cnt.ipynb
reports/: drift_metrics.json
src/:  generate_drift_report.py  .gitignore  Comparativa.py  DataSplit.py  LinearRegression.py  LinearRegressionLasso.py  LinearRegressionRidge.py  clean_utils.py  data_cleaning.py  data_cleaning.py.dvc  data_cleaning_02.py  data_split.py  evaluate_drift.py  model_registry.py  run_drift_analysis.py  run_pipeline.py  sarima.py  simulate_drift.py  sklearn_pipeline.py  train_models.py  validate_data.py  xgbregressor.py
tests/: __init__.py  test_api.py  test_clean_utils.py  test_data_cleaning.py  test_data_split.py  test_imports.py  test_pipeline_integration.py
(+27 files in other folders)
