[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.63.0",
    "mlflow>=3.5.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "ipykernel>=7.1.0",
    "xgboost>=3.1.1",
    "pytest>=8.0.0",
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
]
